syntax = "proto3";

package wfa.measurement.internal.duchy;

option java_package = "org.wfanet.measurement.internal.duchy";
option java_multiple_files = true;

// Details about a particular attempt of running a stage for a computation
// within a duchy.
message ComputationStageDetails {
  oneof stage_specific {
    // Details specific to the WAIT_SKETCHES stage.
    WaitSketchesStageDetails wait_sketch_stage_details = 1;
  }
}

// The WAIT_SKETCHES stage has a bootstrapping step where it requires
// input from all other duchies before it can move forward. The bookkeeping
// of which duchy has provided is stored in this message.
message WaitSketchesStageDetails {
  // A mapping of the name of a duchy to the BlobId corresponding to the
  // ComputationBlobDependency.OUTPUT BLOB where it will be written.
  //
  // Upon receiving a sketch from a duchy the OUTPUT reference with the id
  // found in this map is updated with the local copy of the blob. When all
  // the output references have a path the worker can move onto the next stage.
  map<string, int64> external_duchy_local_blob_id = 1;
}